--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rx.observable.combinetemplate",
   "version": "0.1.0",
-  "description": "",
+  "description": "Generate values  based on the Observable and object template. Similar to `Bacon.combineTemplate`",
   "author": "ahomu",
   "main": "src/index.js",
   "scripts": {
@@ -18,6 +18,16 @@
     "README.md",
     "package.json"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahomu/rx.observable.combinetemplate"
+  },
+  "author": "ahomu",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ahomu/rx.observable.combinetemplate/issues"
+  },
+  "homepage": "https://github.com/ahomu/rx.observable.combinetemplate",
   "dependencies": {
     "clone-deep": "^0.1.1",
     "rx-lite": "^2.5.2"
