--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "homepage": "https://github.com/ahomu/rx.observable.combinetemplate",
   "dependencies": {
-    "clone-deep": "^0.1.1",
+    "clone-deep": "^0.1.1"
+  },
+  "peerDependencies": {
     "rx-lite": "^2.5.2"
   },
   "devDependencies": {
@@ -46,6 +48,7 @@
     "karma-mocha": "^0.1.10",
     "mocha": "^2.2.1",
     "power-assert": "^0.11.0",
+    "rx-lite": "^2.5.2",
     "watchify": "^2.4.0"
   }
 }
