--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "karma-browserify": "^4.0.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-cli": "0.0.4",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.1.10",
     "mocha": "^2.2.1",
     "power-assert": "^0.11.0",
