--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.1",
   "description": "Generate values  based on the Observable and object template. Similar to `Bacon.combineTemplate`",
   "author": "ahomu",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "npm run tdd",
     "test": "karma start --singleRun",
